<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_usuario"
    app:startDestination="@id/menu_pedidos">


    <fragment
        android:id="@+id/menu_pedidos"
        android:name="com.diegolima.ifoodclone.fragment.empresa.EmpresaPedidoFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_empresa_pedido" />
    <fragment
        android:id="@+id/menu_produtos"
        android:name="com.diegolima.ifoodclone.fragment.empresa.EmpresaProdutoFragment"
        android:label="@string/menu_produtos"
        tools:layout="@layout/fragment_empresa_produto" />
    <fragment
        android:id="@+id/menu_financeiro"
        android:name="com.diegolima.ifoodclone.fragment.empresa.EmpresaFinanceiroFragment"
        android:label="@string/menu_financeiro"
        tools:layout="@layout/fragment_empresa_financeiro" />
    <fragment
        android:id="@+id/menu_config"
        android:name="com.diegolima.ifoodclone.fragment.empresa.EmpresaConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_empresa_config" />
</navigation>